--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,30 @@
-<ng-container *ngIf="(auth.user$ | async) as user">
-    Welcome back {{user.displayName}} !
-</ng-container>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="'navigation'" mode="over">
+        <mat-toolbar>Menu</mat-toolbar>
+        <mat-nav-list>
+            <a mat-list-item href="#">Link 1</a>
+            <a mat-list-item href="#">Link 2</a>
+            <a mat-list-item href="#">Link 3</a>
+        </mat-nav-list>
+        <div class="logout">
+            <button mat-flat-button color="warn" (click)="logout()">Logout</button>
+        </div>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
+                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+            </button>
+            <span>lafay-reloaded</span>
+        </mat-toolbar>
 
-<br>
+        <!-- Add Content Here -->
+        <ng-container *ngIf="(auth.user$ | async) as user">
+            Welcome back {{user.displayName}} !
+        </ng-container>
+        <div class="app-content">
+            <router-outlet></router-outlet>
+        </div>
 
-<button (click)="logout()">Logout</button>
+    </mat-sidenav-content>
+</mat-sidenav-container>
