--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
+/** Sidenav **/
+
 mat-sidenav-container {
     height: 100vh;
 }
@@ -15,6 +17,12 @@ mat-sidenav {
 
         mat-icon {
             margin-right: 16px;
+        }
+
+        .list-item-active:not(.mat-list-item-disabled) {
+            font-weight: bold;
+            color: #3f51b5;
+            background: rgba(0, 0, 0, 0.04);
         }
     }
 }
@@ -47,4 +55,12 @@ mat-sidenav {
 .logout button {
     width: calc(100% - 10px);
     margin: 5px;
+}
+
+/** Toolbar **/
+
+.user-image {
+    border-radius: 50%;
+    height: 32px;
+    border: 1px solid;
 }
