--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,12 @@ html,
 body {
     height: 100%;
 }
+
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.fill-remaining-space {
+    flex: 1 1 auto;
 }
