--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -53,14 +53,33 @@ mat-sidenav {
 }
 
 .logout button {
-    width: calc(100% - 10px);
-    margin: 5px;
+    $logout-margin: 5px;
+    width: calc(100% - #{$logout-margin * 2});
+    margin: $logout-margin;
 }
 
 /** Toolbar **/
+$google-avatar-size: 32px;
 
 .user-image {
     border-radius: 50%;
-    height: 32px;
+    height: $google-avatar-size;
     border: 1px solid;
+}
+
+/** App Content */
+$app-content-padding: 5px;
+$toolbar-mobile-height: 56px;
+$toolbar-desktop-height: 64px;
+
+.app-content {
+    padding: $app-content-padding;
+    height: calc(100vh - #{$toolbar-desktop-height + ($app-content-padding * 2)});
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+    .app-content {
+        height: calc(100vh - #{$toolbar-mobile-height + ($app-content-padding * 2)});
+    }
 }
