--- a/src/app/home/welcome/welcome.component.html
+++ b/src/app/home/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="(auth.user$ | async) as user">
-    <h2>Bienvenue {{user.displayName}} !!</h2>
+    <h2>Bienvenue {{user.isAnonymous ? 'invité' : user.displayName}} !!</h2>
 </ng-container>
 
 <br>
