feat: On-boarding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,10 +27,12 @@
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span>Méthode Lafay</span>
+            <button mat-button [routerLink]="['/']">Méthode Lafay</button>
             <span class="fill-remaining-space"></span>
             <ng-container *ngIf="(auth.user$ | async) as user">
-                <img *ngIf="!user.isAnonymous" [src]="user.photoURL" alt="User image" class="user-image">
+                <button mat-button *ngIf="!user.isAnonymous" [routerLink]="['/profile']">
+                    <img [src]="user.photoURL" alt="User image" class="user-image">
+                </button>
             </ng-container>
         </mat-toolbar>
 
