--- a/src/app/home/welcome/welcome.component.html
+++ b/src/app/home/welcome/welcome.component.html
@@ -14,6 +14,11 @@
     </ng-container>
     <ng-template #empty>
         Vous n'avez pas encore pratiqué la méthode 😅
+        <br>
+        <br>
+        <div class="cta-button">
+            <button mat-raised-button color="primary" [routerLink]="['/level']">C'est parti !!</button>
+        </div>
     </ng-template>
 </ng-container>
 
