feat(warmup): session plan

--- a/src/app/workouts/warmup/warmup.component.html
+++ b/src/app/workouts/warmup/warmup.component.html
@@ -1,1 +1,14 @@
-Echauffement !
+<h1 class="center-text">Échauffement</h1>
+
+<p class="warmup-warning">L'objectif est d'échauffer votre corps et non de réaliser des performances (ou de vous
+    épuiser). Vous devez garder
+    votre énergie pour la musculation</p>
+
+<h3>Déroulement de l'échauffement :</h3>
+<app-session-plan [session]="session"></app-session-plan>
+
+<br>
+
+<div class="cta-button">
+    <button mat-raised-button color="primary">Je suis pret !</button>
+</div>
