feat(session-plan): fix scroll on large screens

--- a/src/app/workouts/session-plan/dialog-exercise-info.html
+++ b/src/app/workouts/session-plan/dialog-exercise-info.html
@@ -1,1 +1,7 @@
-<img [src]="data.imageFull" style="width: 100%">
+<mat-dialog-content>
+    <img [src]="data.imageFull" style="width: 100%">
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
+</mat-dialog-actions>
