--- a/src/app/workouts/session/session.component.html
+++ b/src/app/workouts/session/session.component.html
@@ -1,50 +1,76 @@
-<ng-container *ngIf="(currentExercise$ | async) as exercise">
+<ng-container *ngIf="currentStatus !== STATUSES.DONE; else done">
+    <ng-container *ngIf="(currentExercise$ | async) as exercise">
 
-    <div class="exercise-header">
-        <h2>Exercice : {{exercise.name}}</h2>
-        <div class="exercise-meta">
-            <span>
-                Set
-                <span *ngFor="let set of sets" class="set"
-                    [ngClass]="{'current-set': currentSet === set}">{{set}}</span>
-            </span>
-            <span>{{currentExerciseNb}}/{{exercisesNb}}</span>
-        </div>
-    </div>
-
-    <div class="exercise-visual">
-        <img [src]="exercise.image" alt="Image de l'exercise">
-    </div>
-
-    <div class="exercise-cues">
-        <div class="reps" *ngIf="exercise.reps">
-            <span class="reps-nb mat-display-3">{{exercise.reps}}</span>
-            <span class="reps-legend">Répétitions</span>
-        </div>
-        <div class="time" *ngIf="!exercise.reps">
-            <span>{{exercise.time}}</span>
-            <span>Secondes</span>
+        <div class="exercise-header">
+            <h2>Exercice : {{exercise.name}}</h2>
+            <div class="exercise-meta">
+                <span>
+                    <span class="set-legend">Set</span>
+                    <span *ngFor="let set of sets" class="set"
+                        [ngClass]="{'current-set': currentSet === set}">{{set}}</span>
+                </span>
+                <span>{{currentExerciseNb + 1}}/{{exercisesNb}}</span>
+            </div>
         </div>
 
-        <div class="exercise-actions">
-            <button mat-button color="primary" (click)="exerciseDone()">Info</button>
-            <button mat-raised-button color="primary" (click)="exerciseDone()">C'est fait !</button>
+        <div class="exercise-visual">
+            <img [src]="exercise.image" alt="Image de l'exercise" class="exercise-image"
+                *ngIf="currentStatus === STATUSES.EXERCISE">
+            <img src="/assets/stopwatch.png" alt="Image d'un timer" *ngIf="currentStatus === STATUSES.REST">
+            <img src="/assets/water.png" alt="Image d'une gourde d'eau" *ngIf="currentStatus === STATUSES.REST">
         </div>
-    </div>
 
-    <div class="next-up">
-        <div class="rest">
-            <span class="legend">Récupération</span>
-            <span>{{exercise.rest}} secondes</span>
-        </div>
-        <div class="next-exercise" *ngIf="session[currentExerciseNb]">
-            <span class="legend">À suivre</span>
-            <span>{{session[currentExerciseNb].name}}</span>
-            <span class="next-amount" *ngIf="!session[currentExerciseNb].reps">{{session[currentExerciseNb].time}}
-                secondes</span>
-            <span class="next-amount"
-                *ngIf="session[currentExerciseNb].reps">x{{session[currentExerciseNb].reps}}</span>
-        </div>
-    </div>
+        <div class="exercise-cues" *ngIf="currentStatus === STATUSES.EXERCISE">
+            <div class="reps" *ngIf="exercise.reps">
+                <span class="reps-nb mat-display-3">{{exercise.reps}}</span>
+                <span class="reps-legend">Répétitions</span>
+            </div>
+            <div class="time" *ngIf="!exercise.reps">
+                <app-countdown [time]="exercise.time" (done)="exerciseDone()"></app-countdown>
+            </div>
 
+            <div class="exercise-actions" *ngIf="currentStatus === STATUSES.EXERCISE">
+                <button mat-button color="primary" (click)="openDialog(exercise)">Info</button>
+                <button mat-raised-button color="primary" (click)="exerciseDone()">C'est fait !</button>
+            </div>
+        </div>
+
+        <div class="exercise-rest" *ngIf="currentStatus === STATUSES.REST">
+            <app-countdown [time]="exercise.rest" (done)="restDone()"></app-countdown>
+
+            <div class="rest-actions" *ngIf="exercise.skipEffective">
+                <button mat-raised-button color="accent" (click)="restDone()">Passer la récupération</button>
+            </div>
+            <!-- TODO: Add input for effective reps -->
+        </div>
+
+        <div class="next-up">
+            <div class="rest" *ngIf="currentStatus === STATUSES.EXERCISE">
+                <span class="legend">Récupération</span>
+                <span>{{exercise.rest}} secondes</span>
+            </div>
+            <div class="next-exercise" *ngIf="session[currentExerciseNb + 1]">
+                <span class="legend">À suivre</span>
+                <span>{{session[currentExerciseNb + 1].name}}</span>
+                <span class="next-amount"
+                    *ngIf="!session[currentExerciseNb + 1].reps">{{session[currentExerciseNb + 1].time}}
+                    secondes</span>
+                <span class="next-amount"
+                    *ngIf="session[currentExerciseNb + 1].reps">x{{session[currentExerciseNb + 1].reps}}</span>
+            </div>
+            <div class="rest" *ngIf="currentStatus === STATUSES.REST && session[currentExerciseNb + 1]">
+                <span class="legend">Récupération</span>
+                <span>{{session[currentExerciseNb + 1].rest}} secondes</span>
+            </div>
+        </div>
+
+    </ng-container>
 </ng-container>
+
+<ng-template #done>
+    <div class="session-done">
+        <img src="/assets/reward.png" alt="Image d'une médaille">
+        <h2 class="mat-display-3">Bravo !</h2>
+        (la suite est en cours de développement 😅)
+    </div>
+</ng-template>
