--- a/src/app/workouts/session/session.component.scss
+++ b/src/app/workouts/session/session.component.scss
@@ -22,6 +22,10 @@ h2 {
     color: $material-grey;
     font-weight: bold;
 
+    .set-legend {
+        margin: 0 8px;
+    }
+
     .set {
         padding: 5px;
     }
@@ -37,8 +41,11 @@ h2 {
     align-self: center;
 
     img {
-        width: 60%;
+        max-width: 60%;
         border-radius: 3px;
+    }
+
+    img.exercise-image {
         box-shadow: 0px 1px 3px 2px #ccc;
     }
 }
@@ -49,7 +56,8 @@ h2 {
     flex-direction: column;
     justify-content: space-between;
 
-    .reps {
+    .reps,
+    .time {
         display: grid;
         justify-items: center;
 
@@ -65,6 +73,13 @@ h2 {
     .exercise-actions {
         display: flex;
         justify-content: space-around;
+    }
+}
+
+.exercise-rest {
+    .rest-actions {
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -91,4 +106,11 @@ h2 {
     .legend {
         color: #909394;
     }
+}
+
+.session-done {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
