--- a/src/app/workouts/session/session.component.scss
+++ b/src/app/workouts/session/session.component.scss
@@ -2,10 +2,14 @@ $primary-color: #3f50b5;
 $material-grey: #9e9e9e;
 $lighter-grey: #f2f3f5;
 
-:host {
+:host,
+.working-out {
+    height: 100%;
+}
+
+.working-out {
     display: grid;
     grid-template-rows: 1fr 3fr 2fr 1fr;
-    height: 100%;
 }
 
 h2 {
@@ -145,7 +149,23 @@ h2 {
 
 .session-done {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: relative;
+
+    h2 {
+        display: flex;
+        align-items: center;
+    }
+
+    .medal {
+        position: absolute;
+        right: 12px;
+        top: -5px;
+        width: 64px;
+    }
+
+    app-session-summary {
+        margin: 16px 0;
+    }
 }
