--- a/src/app/workouts/level/1b/level1b.component.html
+++ b/src/app/workouts/level/1b/level1b.component.html
@@ -1,1 +1,37 @@
-(La suite est en cours de développement 😅)
+<ng-container *ngIf="(session$ | async) as session; else loading">
+    <app-workout #workout [level]="level" (decideLevel)="decideNewLevel($event)">
+        <app-workout-plan>
+            <app-session-plan [session]="session"></app-session-plan>
+
+            <mat-card class="training-frequency">
+                <h3>
+                    Fréquence d'entrainement
+                    <button mat-raised-button color="primary" (click)="workout.nextStep()">C'est parti</button>
+                </h3>
+                <p>Le lundi, le mercredi et le vendredi</p>
+                <p>Pendant 3 semaines, ensuite passer au niveau 2</p>
+            </mat-card>
+        </app-workout-plan>
+
+        <app-workout-doing>
+            <app-session [session]="session" (done)="workout.onSessionDone($event)"></app-session>
+        </app-workout-doing>
+
+        <app-workout-done>
+            <app-session-done [session]="session"></app-session-done>
+            <div class="cta-button">
+                <button mat-raised-button color="primary" (click)="workout.onWorkoutDone(newLevel)">Top !</button>
+            </div>
+        </app-workout-done>
+
+        <app-workout-new-level>
+            <app-next-level [level]="newLevel"></app-next-level>
+        </app-workout-new-level>
+    </app-workout>
+</ng-container>
+
+<ng-template #loading>
+    <div class="loading">
+        Loading
+    </div>
+</ng-template>
