feat(about): Add an emoji to test the pwa update

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
     Si vous ne possédez pas <a [href]="linkAmazon">la Méthode</a>, je vous conseille vivement de vous la procurer, car
     le manuel déborde
     d'informations plus intéressantes les unes que les autres ! <br>
-    De plus, si vous l'achetez sur le lien ci-dessous, vous pourrez soutenir ce projet ! <br>
+    De plus, si vous l'achetez sur le lien ci-dessous, vous pourrez soutenir ce projet ! 🤗<br>
 </p>
 
 <div class="buy-book">
