--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -11,6 +11,13 @@ h4 {
     justify-content: space-between;
 }
 
+.section-titles {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #9e9e9e;
+    margin-bottom: 0;
+}
+
 .preferences {
     mat-slide-toggle {
         margin: 16px 0;
