--- a/src/app/workouts/cdk/session-plan/dialog-exercise-info.html
+++ b/src/app/workouts/cdk/session-plan/dialog-exercise-info.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-    <img [src]="data.imageFull" style="width: 100%">
+    <app-image-w-loader [image]="data.imageFull"></app-image-w-loader>
     <p class="page-number mat-caption center-text no-margin" *ngIf="data.page">📗→ Page {{data.page}}</p>
 </mat-dialog-content>
 
